--- a/package.json
+++ b/package.json
@@ -6,13 +6,20 @@
   "workspaces": [
     "packages/**"
   ],
-  "scripts": {},
+  "scripts": {
+    "dev": "run-p dev:*",
+    "dev:frontend": "yarn workspace frontend dev",
+    "dev:functions": "yarn workspace functions dev",
+    "emulator": "firebase emulators:start"
+  },
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^4.28.3",
-    "eslint": "^7.30.0",
+    "@typescript-eslint/parser": "^4.28.3",
+    "eslint": "^7.31.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^2.3.2",
     "prettier-plugin-solidity": "^1.0.0-beta.16",
     "ts-node": "^10.1.0",
