--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -4,7 +4,8 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-
+    "dev": "webpack --watch",
+    "build": "webpack"
   },
   "browserslist": {
     "production": [
@@ -19,10 +20,24 @@
     ]
   },
   "dependencies": {
-    "glslEditor": "^0.0.22"
+    "ethers": "^5.4.1",
+    "firebase": "^8.3.0",
+    "glslEditor": "^0.0.22",
+    "web3": "^1.4.0"
   },
   "devDependencies": {
-    
+    "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.1.0",
+    "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.3.2",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "style-loader": "^3.1.0",
+    "ts-loader": "^9.2.3",
+    "url": "^0.11.0",
+    "webpack": "^5.45.1",
+    "webpack-cli": "^4.7.2"
   }
 }
-  
