--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,11 @@
 name: test
 on:
-  pull_request:
-    branches: [develop]
+  # pull_request:
+  #   branches: [develop]
+  push:
+
   workflow_dispatch: {}
+
   # push:
   #   branches:    
   #     - develop
@@ -11,7 +14,12 @@ on:
 jobs:
   check-bats-version:
     runs-on: ubuntu-latest
+    if: github.ref == 'refs/heads/develop'
     steps:
       - run: echo "this is test"
       - run: |
           echo "${GITHUB_REF#refs/heads/}" | tr '._/' '-'
+      - run: |
+          echo "${REF##*/}"
+      - run: |
+          echo ${{ github.ref }}
