--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -3,6 +3,7 @@ on:
   # pull_request:
   #   branches: [develop]
   push:
+    branches: [main]
 
   workflow_dispatch: {}
 
@@ -12,9 +13,9 @@ on:
   #   tags:
   #     - 'test-v[0-9]+.[0-9]+.[0-9]+'
 jobs:
-  check-bats-version:
+  test:
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/develop'
+    if: github.event_name == 'push' && github.ref == 'refs/heads/main'
     steps:
       - run: echo "this is test"
       - run: |
